--- a/Talk7/03_related_work/03-1_ddos.tex
+++ b/Talk7/03_related_work/03-1_ddos.tex
@@ -4,7 +4,7 @@
 % TODO add an army of zombies
 
 % Introduction describing the base of such attacks
-A DDoS (Distributed Denial of Service) attack has become a popular way to cripple a server of an institution or a private person and has shown to be an immense threat to the Internet. However, how is it possible for attackers to execute such attacks? The current internet design has its purpose of moving packets from a source to a known destination. The network itself minimally forwards all packages at minimal cost and generally outsources the complexity, including security, transport reliability and quality of service to the sender and receiver of the transported packages. This concept has been called the \textbf{end-to-end paradigm}. As no intermediary entity will step in, a party (either sender or receiver) can damage its opposition by using different attack possibilities such as IP Spoofing or the aforementioned DDoS attacks \cite{Mirkovic2004}. By faking the source address in the header of a packet, the sender can hide its identity. This security issue is called IP Spoofing \cite{Cloudflare2019}. As described in \citet{Mirkovic2004} following security issues raise opportunities of attacks:
+A DDoS (Distributed Denial of Service) attack has become a popular way to cripple a server of an institution or a private person and has shown to be an immense threat to the Internet. However, how is it possible for attackers to execute such attacks? The current internet design has its purpose of moving packets from a source to a known destination. The network itself minimally forwards all packages at minimal cost and generally outsources the complexity, including security, transport reliability and quality of service to the sender and receiver of the transported packages. This concept has been called the \textbf{end-to-end paradigm}. As no intermediary entity will step in, a party (either sender or receiver) can damage its opposition by using different attack possibilities such as IP Spoofing or the aforementioned DDoS attacks \cite{Mirkovic2004}. By faking the source address in the header of a packet, the sender can hide its identity. This security issue is called IP Spoofing \cite{Cloudflare2019}. As described in \cite{Mirkovic2004} following security issues raise opportunities of attacks:
 \begin{itemize}
   \item Limited internet resources: Every host or service has hardware limitations that users may consume.
   \item Highly interdependent internet security: No matter how secure a host may be configured, DDoS attacks always depend on the security of others within the Internet.
@@ -59,7 +59,7 @@ To summarize, this approach uses an already existing and publicly available dist
 % \cite{Mannhart2018}
 
 % Short introduction
-With cooperation between multiple domains, various collaborating autonomous systems (AS) can alleviate DDoS attacks by redirecting excessive traffic to other domains for filtering the traffic. Incentives ensure the use of a mitigation-as-a-service for cooperative network defenses. By paying fees enterprises or individuals can subscribe to such a cooperative defense network and protect themselves from future attacks.
+With cooperation between multiple domains, various collaborating autonomous systems (AS) can alleviate DDoS attacks by redirecting excessive traffic to other domains for filtering the traffic. Incentives ensure the use of a mitigation-as-a-service for cooperative network defenses. By paying fees enterprises or individuals can subscribe to such a cooperative defense network and protect themselves from future attacks \cite{Mannhart2018}.
 
 As soon as a target detects an attack, it sends a request to all participating autonomous systems to mitigate the current attack. Subsequent, a mitigator, which is responsible for the range being attacked, then either accepts or declines the mitigation request. By using a \textbf{proof-of-mitigation}, the completion of the mitigation has to be confirmed, and the target can pay the mitigator. As this proof-of-mitigation has to satisfy time constraints, tamper-evidence, and reproducibility this proof has to be executed automatically during the current time window. Additionally, any user interaction has to be excluded to ensure efficiency \cite{Mannhart2018}.
 
@@ -76,10 +76,10 @@ Virtualized  Network Functions (VNF) can be deployed on any hardware without any
 \end{figure}
 
 \paragraph{Trusted Computing}
-In contrast to the previous approach, illustrated in \ref{ddos_marketplace_vnf}, the mitigator directly initiates the mitigation. So-called Trusted Platform Modules (TPM) allow secure storage of hashes. This allows that only the code that is approved by the cooperative defense will be run on the system. VNFs create a defense network where trusted and known VNFs always handle requests for mitigation without trusting the responsible operator that provides the mitigation service to the autonomous system.  A big disadvantage of trusted computing is the strict hardware requirement, as the TPM is only available as a standalone chip or integrated into the motherboard.
+In contrast to the previous approach, illustrated in \ref{ddos_marketplace_vnf}, the mitigator directly initiates the mitigation. So-called Trusted Platform Modules (TPM) allow secure storage of hashes. This allows that only the code that is approved by the cooperative defense will be run on the system. VNFs create a defense network where trusted and known VNFs always handle requests for mitigation without trusting the responsible operator that provides the mitigation service to the autonomous system.  A big disadvantage of trusted computing is the strict hardware requirement, as the TPM is only available as a standalone chip or integrated into the motherboard \cite{Mannhart2018}.
 
 \paragraph{Secure logging}
-As mitigators can use full network infrastructure, they are allowed to proof the mitigation using the available traffic data. By having a detailed log of network activities, they could prove the successful mitigation by identifying a reduction in the traffic from the attack source to the DDoS target. A mitigation-proof based on the log files decreases the complexity of the proof. The aforementioned log file has been created on an isolated system (which requires no additional trust) and therefore has to be checked about its integrity by a third party. A disadvantage comes with high-volume attacks which create large log files. These large files introduce additional delays as the log files have to be transferred for remote auditing.
+As mitigators can use full network infrastructure, they are allowed to proof the mitigation using the available traffic data. By having a detailed log of network activities, they could prove the successful mitigation by identifying a reduction in the traffic from the attack source to the DDoS target. A mitigation-proof based on the log files decreases the complexity of the proof. The aforementioned log file has been created on an isolated system (which requires no additional trust) and therefore has to be checked about its integrity by a third party. A disadvantage comes with high-volume attacks which create large log files. These large files introduce additional delays as the log files have to be transferred for remote auditing \cite{Mannhart2018}.
 \begin{figure}[ht]
   \begin{center}
     \includegraphics[scale=0.5]{Talk7/img/ddos/cooperative_network_secure_logging}
@@ -89,7 +89,7 @@ As mitigators can use full network infrastructure, they are allowed to proof the
 \end{figure}
 
 \paragraph{Network Slicing}
-Since network virtualization technologies and Software-Defined Networks (SDN) have advanced in recent times, they both serve as a basis for network slicing as a service. When the attack target requests mitigation services, it gains access to the virtualized network slice of the mitigators autonomous system. The slice is then configured to provide access for all attacking IP addresses that have been requested within the mitigation request.
+Since network virtualization technologies and Software-Defined Networks (SDN) have advanced in recent times, they both serve as a basis for network slicing as a service. When the attack target requests mitigation services, it gains access to the virtualized network slice of the mitigators autonomous system. The slice is then configured to provide access for all attacking IP addresses that have been requested within the mitigation request \cite{Mannhart2018}.
 \begin{figure}[ht]
   \begin{center}
     \includegraphics[scale=0.5]{Talk7/img/ddos/cooperative_network_network_slicing}
@@ -99,7 +99,7 @@ Since network virtualization technologies and Software-Defined Networks (SDN) ha
 \end{figure}
 
 % Final considerations of this paper
-To conclude the work of this paper, the authors registered that none of the following oneself could be used to address a trade-off between practicability and security when qualitatively comparing all four approaches. Combining some of these methods could lead to a practical, as well a secure solution.
+To conclude the work of this paper, the authors registered that none of the following oneself could be used to address a trade-off between practicability and security when qualitatively comparing all four approaches. Combining some of these methods could lead to a practical, as well a secure solution \cite{Mannhart2018}.
 
 
 \subsubsection{Multi domain DDoS Mitigation based on blockchains}
@@ -122,5 +122,5 @@ This architecture is based on key technologies such as software-defined networks
 % https://github.com/savf/BloSS
 % \cite{Rodrigues2019}
 
-Similarly to \cite{Rodrigues2017}, this paper deals with cooperative, multi-domain DDoS defense systems, but it presents a Blockchain Signaling System (BloSS) which is a somewhat technical approach of deploying hardware simplifying signals of DDoS attacks. Principal components for a BloSS are smart contracts that describe how information has to be transferred between Autonomous Systems (AS) and decentralized applications that include parameters defining the interaction of AS. Additionally, a consortium based blockchain, differentiating from the public and private blockchains, serves as an intermediary level of confidence. An Autonomous System (AS) thereby creates a wallet and notifies a smart contract that stores some information. The smart contract then implements a method to reclaim addresses published by other systems by querying a central smart contract. This central SC is used to configure all involved smart contracts with updated information on their managed IP networks, as the addresses of the involved wallets are immutable. In order to prevent free-riding peers (parties that only consume without any contribution), an incentive mechanism need to be set by defining tokens.  % TODO what do they do?
+Similarly to \cite{Rodrigues2017}, this paper deals with cooperative, multi-domain DDoS defense systems, but it presents a Blockchain Signaling System (BloSS) which is a somewhat technical approach of deploying hardware simplifying signals of DDoS attacks. Principal components for a BloSS are smart contracts that describe how information has to be transferred between Autonomous Systems (AS) and decentralized applications that include parameters defining the interaction of AS. Additionally, a consortium based blockchain, differentiating from the public and private blockchains, serves as an intermediary level of confidence. An Autonomous System (AS) thereby creates a wallet and notifies a smart contract that stores some information. The smart contract then implements a method to reclaim addresses published by other systems by querying a central smart contract. This central SC is used to configure all involved smart contracts with updated information on their managed IP networks, as the addresses of the involved wallets are immutable. In order to prevent free-riding peers (parties that only consume without any contribution), an incentive mechanism need to be set by defining tokens \cite{Rodrigues2019}.  % TODO what do they do?
 %  TODO more about Architecture and Hardware?
